# urban-residential-classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/folds/: inner_fold_0.csv  inner_fold_1.csv  inner_fold_2.csv  inner_fold_3.csv  inner_fold_4.csv  outer_folds.csv
data/processed/: descriptive_data.csv  model_data.csv
data/raw/: BD_complejos.xlsx
notebooks/: 02_Nested_Cross_Validation.ipynb  03_Performance.ipynb  03_Performance_evaluation.ipynb  03_Performance_experiment.ipynb  04_Performance_results_analysis.ipynb
output/5x3_NCV/Decision_Tree/: Decision_Tree_class_metrics.csv  Decision_Tree_confusion_matrix.csv  Decision_Tree_global_metrics.csv
output/5x3_NCV/Logistic_Regression/: Logistic_Regression_class_metrics.csv  Logistic_Regression_confusion_matrix.csv  Logistic_Regression_global_metrics.csv
output/5x3_NCV/Random_Forest/: Random_Forest_class_metrics.csv  Random_Forest_confusion_matrix.csv  Random_Forest_global_metrics.csv
output/5x3_NCV/SVM/: SVM_class_metrics.csv  SVM_confusion_matrix.csv  SVM_global_metrics.csv
output/5x3_NCV/XGBoost/: XGBoost_class_metrics.csv  XGBoost_confusion_matrix.csv  XGBoost_global_metrics.csv
src/: EDA_utils.py  config.py  nested_cv_fold.py  performance.py  performance_utils.py
