# pyproject.toml
[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tfm"
version = "0.1.0"
description = "Urban Analysis Using Supervised Machine Learning"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]      